WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315165
[GTK][WPE] backdrop filter shouldn't affect to subsequent elements of E
https://bugs.webkit.org/show_bug.cgi?id=315165
Summary
[GTK][WPE] backdrop filter shouldn't affect to subsequent elements of E
Fujii Hironori
Reported
2026-05-19 23:35:30 PDT
Created
attachment 479728
[details]
test case [GTK][WPE] backdrop filter shouldn't affect to subsequent elements of E
https://drafts.csswg.org/filter-effects-2/#BackdropRoot
> Paint all content, in painting order, between (and including) the > ancestor Backdrop Root element and element E.
Attachments
test case
(352 bytes, text/html)
2026-05-19 23:35 PDT
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-05-20 00:13:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65262
EWS
Comment 2
2026-05-20 02:07:42 PDT
Committed
313560@main
(d56cbfb1f04c): <
https://commits.webkit.org/313560@main
> Reviewed commits have been landed. Closing PR #65262 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug