SkiaCompositingLayer: backdrop filter shouldn't affect to subsequent elements of element E https://bugs.webkit.org/show_bug.cgi?id=315165

Reviewed by Carlos Garcia Campos.

As per <https://drafts.csswg.org/filter-effects-2/#BackdropRoot>, the Backdrop
Root Image should

> Paint all content, in painting order, between (and including) the
> ancestor Backdrop Root element and element E.

So, we have to skip painting all elements after element E to make the Backdrop
Root Image.

Test: css3/filters/backdrop/backdrop-blur-and-subsequent-elements.html

* LayoutTests/css3/filters/backdrop/backdrop-blur-and-subsequent-elements-expected.html: Added.
* LayoutTests/css3/filters/backdrop/backdrop-blur-and-subsequent-elements.html: Added.
* Source/WebCore/platform/graphics/skia/SkiaCompositingLayer.cpp:
(WebCore::SkiaCompositingLayer::paintSelfAndChildren):
(WebCore::SkiaCompositingLayer::recursivePaint):
* Source/WebCore/platform/graphics/skia/SkiaCompositingLayer.h:

Canonical link: https://commits.webkit.org/313560@main